# SeidelVisualize

./: .gitignore  CMakeLists.txt  Common.h  GeometryAlgorithms.h  InputPolygonWidget.cpp  InputPolygonWidget.h  LICENSE  PoolAllocator.h  README.md  SeidelVisualize.cpp  SeidelVisualize.h  SeidelVisualize.qrc  SeidelVisualize.sln  SeidelVisualize.ui  SeidelVisualize.vcxproj  SeidelVisualize.vcxproj.filters  TrapezoidationTreeWidget.cpp  TrapezoidationTreeWidget.h  TriangulatePolygon_Seidel.cpp  TriangulatePolygon_Seidel.h  VarPoolAllocator.h  geometry.h  main.cpp  vec2.h  vec3.h  vec4.h
Polygons/: Europe-detailed.poly  Europe-mainland.poly  Europe.poly  contrib.poly  contrib2.poly  diagram1.poly  for-paper-images.poly  invalid-crossing.poly  invalid-point-on-seg.poly  invalid-triangle-point.poly  invalid-weakly-simple-1.poly  invalid-weakly-simple-2.poly  multi-same-pt-2.poly  multi-same-pt.poly  multi-test1.poly  multi-test2.poly  multi-test3.poly  quad.poly  quad2.poly  rooms.poly  spikey.poly  test-close-pts.poly  test-colinear-pts.poly  test-hole-diff-wind.poly  test-hole-same-wind-2.poly  test-hole-same-wind.poly  test-nested-outl-2.poly  (+24 more)
Source/: Benchmark.cpp  Benchmark.h  CMakeLists.txt  ComboWidget.cpp  ComboWidget.h  Common.h  IntSliderWidget.cpp  IntSliderWidget.h  Main.cpp  MainWindow.cpp  MainWindow.h  MenuPanel.cpp  MenuPanel.h  PolygonWidget.cpp  PolygonWidget.h  PopupButtonWidget.cpp  PopupButtonWidget.h  SeidelTriangulator.cpp  SeidelTriangulator.h  Serialization.cpp  Serialization.h  SplitterWidget.cpp  SplitterWidget.h  StepThroughPanel.cpp  StepThroughPanel.h  TrapTreeWidget.cpp  TrapTreeWidget.h
(+8 files in other folders)
